--- a/LVS/si.env
+++ b/LVS/si.env
@@ -18,9 +18,9 @@ lvsSchematicViewName = "schematic"
 lvsSchematicViewList = '("auLvs" "cmos_sch" "schematic" "symbol")
 lvsSchematicStopList = '("auLvs")
 lvsNetlistSchematic = 't
-applyDeviceFixing = 'nil
-correspondenceFile = "/escnfs/courses/fa24-cse-30342.01/dropbox/rpaillet/VLSI/digital-integrated-circuits/lvs_corr_file"
-createXref = 'nil
+applyDeviceFixing = 't
+correspondenceFile = "/escnfs/courses/fa24-cse-30342.01/dropbox/ehamer/VLSI/digital-integrated-circuits/lvs_corr_file"
+createXref = 't
 disableRewire = 'nil
 useFileCorrespondence = 'nil
 useTerminalCorrespondence = 't
